--- a/todos-frontend/src/styles/components/_filters.scss
+++ b/todos-frontend/src/styles/components/_filters.scss
@@ -4,8 +4,15 @@
     padding: 0 4rem;
     font-size: 0.9rem;
     font-weight: $font-bold;
+    
+    .btn {
+        @include themed() {
+            color: get-theme-value('text-secondary-color');
+        }
+        width: 100%;
+    }
 
     .active-filter {
-        color: $primary-color;
+        color: $primary-color !important;
     }
 }
