--- a/todos-frontend/src/styles/components/_add-todo.scss
+++ b/todos-frontend/src/styles/components/_add-todo.scss
@@ -1,51 +1,43 @@
 ﻿form {
-    @include flex-box();
+    @include flex-box(space-evenly);
     @include themed() {
         color: get-theme-value('bg-secondary-color');
     }
     height: $height;
-    padding: 0.5rem 0 0.5rem 1rem;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
 
-    span {
-        @include themed() {
-            border: 2px solid get-theme-value('check-icon-color');
-        }
-        width: 25px;
-        height: 25px;
-        border-radius: 50%;
-        margin-right: 0.5rem;
-    }
-
-    #todo-input {
-        @include themed() {
-            background-color: get-theme-value('bg-secondary-color');
-            color: get-theme-value('text-primary-color');
-        }
-        flex: 1;
-        height: $height;
-        border: none;
-        font-size: 1rem;
-        padding: 0 0.5rem;
-        outline: none;
-
-        &:active {
-            @include themed() {
-                background-color: get-theme-value('bg-secondary-color');
-            }
-        }
-    }
-
-    .add-todo {
+    > .btn {
         @include themed() {
             color: get-theme-value('plus-icon-color');
         }
-        height: $height;
-        width: $height;
-        border: none;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
         background-color: inherit;
-        border-top-right-radius: inherit;
-        border-bottom-right-radius: inherit;
-        font-size: 2.5rem;
-        font-weight: $font-normal;
+        font-size: 2.0rem;
+
+        img {
+            width: 25px;
+        }
+    }
+}
+
+.todo-input {
+    @include themed() {
+        background-color: get-theme-value('bg-secondary-color');
+        color: get-theme-value('text-primary-color');
+    }
+    flex: auto;
+    height: $height;
+    border: none;
+    font-size: 1rem;
+    padding: 0 0.5rem;
+    outline: none;
+    width: 100%;
+
+    &:active {
+        @include themed() {
+            background-color: get-theme-value('bg-secondary-color');
+        }
     }
 }
