--- a/todos-frontend/src/styles/_variables.scss
+++ b/todos-frontend/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-﻿$font-family: 'Josefin Sans', sans-serif;
+$font-family: 'Josefin Sans', sans-serif;
 $normal-font-size: 18px;
 $title-font-size: 1.8rem;
 $border-radius: 5px;
