--- a/todos-frontend/src/styles/components/_add-todo.scss
+++ b/todos-frontend/src/styles/components/_add-todo.scss
@@ -1,4 +1,4 @@
-﻿form {
+form {
     @include flex-box(space-evenly);
     @include themed() {
         color: get-theme-value('bg-secondary-color');
