--- a/todos-frontend/src/styles/App.scss
+++ b/todos-frontend/src/styles/App.scss
@@ -1,4 +1,4 @@
-﻿@import-normalize;
+@import-normalize;
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
 @import './variables';
