Refactor frontend: improve code formatting - Update Vite configuration with new config files - Standardize code formatting across all TypeScript and SCSS files - Clean up README.md formatting and content - Add Google Fonts (Josefin Sans) to index.html - Update package-lock.json with latest dependencies

--- a/todos-frontend/src/styles/App.scss
+++ b/todos-frontend/src/styles/App.scss
@@ -1,15 +1,8 @@
-@import-normalize;
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
-
-@import './variables';
-@import './themes';
-@import './mixins';
-
 // General styles
-@import './general';
+@use 'general';
 
 // Components
-@import './components/header';
-@import './components/add-todo';
-@import './components/todo-list';
-@import './components/filters';
+@use 'components/header';
+@use 'components/add-todo';
+@use 'components/todo-list';
+@use 'components/filters';
