--- a/todos-frontend/src/styles/components/_header.scss
+++ b/todos-frontend/src/styles/components/_header.scss
@@ -1,13 +1,16 @@
-header {
-    @include flex-box();
-    padding-top: 0.3rem;
-    background-color: transparent;
+@use '../variables' as *;
+@use '../mixins' as *;
 
-    h1 {
-        font-size: $title-font-size;
-        font-weight: $font-bold;
-        text-transform: uppercase;
-        letter-spacing: 8px;
-        color: $text-color;
-    }
+header {
+	@include flex-box();
+	padding-top: 0.3rem;
+	background-color: transparent;
+
+	h1 {
+		font-size: $title-font-size;
+		font-weight: $font-bold;
+		text-transform: uppercase;
+		letter-spacing: 8px;
+		color: $text-color;
+	}
 }
