--- a/todos-frontend/src/styles/components/_todo-list.scss
+++ b/todos-frontend/src/styles/components/_todo-list.scss
@@ -1,116 +1,119 @@
+@use '../variables' as *;
+@use '../themes' as *;
+@use '../mixins' as *;
+
 .todos-container {
-    @include themed() {
-        box-shadow: 0 8px 15px get-theme-value('shadow-color');
-    }
+	@include themed() {
+		box-shadow: 0 8px 15px get-theme-value('shadow-color');
+	}
 }
 
 .todos {
-    list-style: none;
+	list-style: none;
 }
 
 .empty-todos-container {
-    height: $height;
-    padding: 0.5rem 0.5rem 0.5rem 1rem;
-    border-bottom-left-radius: $border-radius;
-    border-bottom-right-radius: $border-radius;
-    @include flex-box(space-evenly);
-    @include themed() {
-        color: get-theme-value('text-primary-color');
-    }
+	height: $height;
+	padding: 0.5rem 0.5rem 0.5rem 1rem;
+	border-bottom-left-radius: $border-radius;
+	border-bottom-right-radius: $border-radius;
+	@include flex-box(space-evenly);
+	@include themed() {
+		color: get-theme-value('text-primary-color');
+	}
 }
 
 .todo-item {
-    cursor: pointer;
-    height: $height;
-    padding: 0.5rem 0.5rem 0.5rem 1rem;
-    @include flex-box(space-evenly);
-    @include themed() {
-        color: get-theme-value('text-primary-color');
-        background-color: get-theme-value('bg-secondary-color');
-        border-bottom: 1px solid get-theme-value('check-icon-color');
-    }
+	cursor: pointer;
+	height: $height;
+	padding: 0.5rem 0.5rem 0.5rem 1rem;
+	@include flex-box(space-evenly);
+	@include themed() {
+		color: get-theme-value('text-primary-color');
+		background-color: get-theme-value('bg-secondary-color');
+		border-bottom: 1px solid get-theme-value('check-icon-color');
+	}
 
-    > .btn {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
+	> .btn {
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
 
-        img {
-            width: 15px;
-        }
-    }
+		img {
+			width: 15px;
+		}
+	}
 
-    &:first-of-type {
-        border-top-left-radius: $border-radius;
-        border-top-right-radius: $border-radius;
-    }
+	&:first-of-type {
+		border-top-left-radius: $border-radius;
+		border-top-right-radius: $border-radius;
+	}
 }
 
 .todo {
-    flex: auto;
-    padding-left: 1rem;
-    font-size: 1rem;
-    cursor: pointer;
-    @include themed() {
-        color: get-theme-value('text-primary-color');
-    }
-
+	flex: auto;
+	padding-left: 1rem;
+	font-size: 1rem;
+	cursor: pointer;
+	@include themed() {
+		color: get-theme-value('text-primary-color');
+	}
 }
 .completed {
-    text-decoration: line-through;
-    @include themed() {
-        color: get-theme-value('text-secondary-color');
-    }
+	text-decoration: line-through;
+	@include themed() {
+		color: get-theme-value('text-secondary-color');
+	}
 }
 .checkbox-label {
-    width: 25px;
-    height: 25px;
-    position: relative;
-    border-radius: 50%;
-    cursor: pointer;
-    @include flex-box(center);
-    @include themed() {
-        border: 1px solid get-theme-value('text-secondary-color');
-    }
+	width: 25px;
+	height: 25px;
+	position: relative;
+	border-radius: 50%;
+	cursor: pointer;
+	@include flex-box(center);
+	@include themed() {
+		border: 1px solid get-theme-value('text-secondary-color');
+	}
 
-    .checkbox-round {
-        width: 22px;
-        height: 22px;
-        border-radius: 50%;
-        @include themed() {
-            background-color: get-theme-value('bg-secondary-color');
-        }
-    }
+	.checkbox-round {
+		width: 22px;
+		height: 22px;
+		border-radius: 50%;
+		@include themed() {
+			background-color: get-theme-value('bg-secondary-color');
+		}
+	}
 
-    &:hover {
-        background-image: $check-background;
-    }
+	&:hover {
+		background-image: $check-background;
+	}
 
-    input {
-        width: 0;
-        height: 0;
-        opacity: 0;
-        position: absolute;
-        cursor: pointer;
+	input {
+		width: 0;
+		height: 0;
+		opacity: 0;
+		position: absolute;
+		cursor: pointer;
 
-        &:checked + .checkbox-round {
-            background-image: url(../../images/icon-check.svg), $check-background;
-            background-repeat: no-repeat;
-            background-position: center;
-            width: 25px;
-            height: 25px;
-        }
-    }
+		&:checked + .checkbox-round {
+			background-image: url(../../images/icon-check.svg), $check-background;
+			background-repeat: no-repeat;
+			background-position: center;
+			width: 25px;
+			height: 25px;
+		}
+	}
 }
 
 .actions {
-    height: $height;
-    padding: 1.1rem;
-    @include flex-box();
+	height: $height;
+	padding: 1.1rem;
+	@include flex-box();
 
-    .left {
-        @include themed() {
-            color: get-theme-value('text-secondary-color');
-        }
-    }
+	.left {
+		@include themed() {
+			color: get-theme-value('text-secondary-color');
+		}
+	}
 }
