--- a/todos-frontend/src/styles/components/_filters.scss
+++ b/todos-frontend/src/styles/components/_filters.scss
@@ -12,3 +12,21 @@
 		color: $primary-color !important;
 	}
 }
+
+.filters-desktop {
+	display: flex;
+
+	@media (max-width: 800px) {
+		display: none;
+	}
+}
+
+.filters-mobile {
+	display: none;
+
+	@media (max-width: 800px) {
+		display: flex;
+		justify-content: center;
+		margin-top: 1rem;
+	}
+}
